--- a/web/index.html
+++ b/web/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://d2qarrg319cj9i.cloudfront.net/SAMMXP2PB2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GLA - IntegraMinds Fullstack</title>
+    <link href="style.css" rel="stylesheet">
+    <title>Responsive Design</title>
   </head>
   <body>
+    <nav class="navbar">
+      <ul class="nav-list">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact Us</a></li>
+
+      </ul>
+      <div class="rightNav">
+        <input type="text" name="search" id="search">
+        <button class="btn btn-sm">Search</button>
+      </div>
+    </nav>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
